--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "nenad/yii2-password-strength": "*",
-        "mihaildev/yii2-ckeditor": "*"
+        "mihaildev/yii2-ckeditor": "*",
+        "yiisoft/yii2-twig": "~2.0.0"
     },
     "require-dev": {
         "codeception/codeception": "*",
