--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "yiisoft/yii2-swiftmailer": "*",
         "nenad/yii2-password-strength": "*",
         "mihaildev/yii2-ckeditor": "*",
+        "codemix/yii2-localeurls": "*",
         "yiisoft/yii2-twig": "~2.0.0"
     },
     "require-dev": {
